--- a/libcal/custom-footer.html
+++ b/libcal/custom-footer.html
@@ -63,7 +63,7 @@
 				<li><a href="http://libraries.mit.edu/experts">Librarians & subject experts</a></li>
 				<li><a href="http://libraries.mit.edu/research-guides">Research guides</a></li>
 				<li><a href="http://libraries.mit.edu/scholarly">Scholarly publishing</a></li>
-				<li><a href="http://libraries.mit.edu/about/faqs/remote.html">E-resource troubleshooting</a></li>
+				<li><a href="http://libraries.mit.edu/research-support/connect/">Connect from on and off-campus</a></li>
 				<li><a href="http://libraries.mit.edu/research-support/">More research support options</a></li>
 			</ul>
 		</div>
