--- a/libanswers/custom-footer.html
+++ b/libanswers/custom-footer.html
@@ -75,7 +75,7 @@
 				<li><a href="http://libraries.mit.edu/manage-info">Manage your info</a></li>
 				<li><a href="http://libraries.mit.edu/apps">Apps for academics</a></li>
 				<li><a href="http://libraries.mit.edu/libx">LibX</a></li>
-				<li><a href="http://libraries.mit.edu/help/rss/barton/">New books RSS feeds</a></li>
+				<li><a href="http://libraries.mit.edu/new-books">New books RSS feeds</a></li>
 				<li><a href="http://libraries.mit.edu/productivity-tools/">More productivity tools</a></li>
 			</ul>
 		</div>
