--- a/libguides/custom-footer.html
+++ b/libguides/custom-footer.html
@@ -51,7 +51,7 @@
 				<li><a href="http://libraries.mit.edu/getit">Get it: options for getting books & articles</a></li>
 				<li><a href="http://libraries.mit.edu/circ">Circulation FAQ</a></li>
 				<li><a href="http://libraries.mit.edu/reserves">Reserves & TIP FAQ</a></li>
-				<li><a href="http://libraries.mit.edu/ordering/non-mit-access/index.html">Visit non-MIT libraries</a></li>
+				<li><a href="http://libraries.mit.edu/otherlibraries">Visit non-MIT libraries</a></li>
 				<li><a href="http://libguides.mit.edu/content.php?pid=213241&sid=1774488">More borrow & request options</a></li>
 			</ul>
 		</div>
