--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" type="text/css" href="https://libraries.mit.edu/css/libguides/main.css" />
-<script  type="text/javascript" src="https://libraries.mit.edu/css/libguides/modernizr.js"/></script>
+<script type="text/javascript" src="https://libraries.mit.edu/css/libguides/modernizr.js"/></script>
 
 <!--added by springshare support-->
 <meta name="google-site-verification" content="W4ndmQs2yM0nT5SkZiQJXPjyEIZCIt3o3uhWg6_klbI" />
@@ -11,10 +11,17 @@
 
 <!--added by Darcy to confirm w/ Google webmaster tools we own this site-->
 <meta name="google-site-verification" content="82Cv3HFWvcefC_9XauvglcfB4h3o0uuiC3nKWWkL_eE" />
+
+<!--meta tag to scale mobile device display-->
 <meta name="viewport" content="width=device-width, maximum-scale=1">
 
 <script>
 jQuery(document).ready(function($) {
   jQuery("img[alt='null'], img[alt='Null'], img[alt='NULL']").attr("alt", "");
+  var libchat_efc75c55947db323d4faab725b79307f = { iid:59, key:'fb10446730e271c', width:'240' };
+  $('header .menu--toggle').click(function(){
+    $('#nav-main').toggleClass('active');
+    $('.wrap-page').toggleClass('mobile-nav-active');
+  });
 });
 </script>
