Font and spacing adjustments
Forcing "Open Sans Light", which wasn't being chosen before somehow
Reducing space around footer elements to compensate for narrower content
column

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -75,7 +75,7 @@ jQuery(document).ready(function($) {
   }
 
   body {
-    font-family: "Open Sans", Helvetica, sans-serif;
+    font-family: "Open Sans Light", Helvetica, sans-serif;
     line-height: 1.4;
     text-rendering: optimizeLegibility;
   }
@@ -122,7 +122,7 @@ jQuery(document).ready(function($) {
     -ms-flex-align: end;
     align-items: flex-end;
     background: #333333;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open Sans Light', sans-serif;
     -webkit-box-pack: start;
     -webkit-justify-content: flex-start;
     -ms-flex-pack: start;
@@ -841,7 +841,7 @@ jQuery(document).ready(function($) {
   }
 
   .footer-main .links-all .flex-item {
-    margin-right: 1.75em;
+    margin-right: 1.25em;
   }
 
   .footer-main .links-all .link-sub {
@@ -895,7 +895,7 @@ jQuery(document).ready(function($) {
   @media only screen and (min-width: 569px) {
     .footer-main .links-primary span {
       font-weight: 300;
-      padding-left: 1em;
+      padding-left: 0.75em;
       width: auto;
     }
 
@@ -903,7 +903,7 @@ jQuery(document).ready(function($) {
       color: #dedede;
       content: '|';
       display: inline-block;
-      margin-left: 1em;
+      margin-left: 0.75em;
     }
   }
   .footer-main .logo-mit-lib {
