--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -24,7 +24,7 @@ jQuery(document).ready(function($) {
 
 body {
   font-family: "Open Sans", Helvetica, sans-serif;
-  font-size: 100%;
+  font-size: 16px; /* was 100%; */
   line-height: 1.4;
   text-rendering: optimizeLegibility;
 }
@@ -69,7 +69,7 @@ a {
           justify-content: flex-start;
   clear: both;
   margin: 0 auto;
-  max-width: 1024px;
+  max-width: 1170px;
   width: 100%;
 }
 
@@ -107,7 +107,7 @@ a {
 }
 
 .header-main .logo-mit-lib svg {
-  max-height: 3em;
+  max-height: 4em;
 }
 
 .header-main .logo-mit-lib .arch {
@@ -136,8 +136,8 @@ a {
     -webkit-order: 4;
         -ms-flex-order: 4;
             order: 4;
-    margin-bottom: 8px;
-    margin-bottom: 0.5rem;
+    margin-bottom: 16px;
+    margin-bottom: 1rem;
   }
 }
 .header-main .link-site-search {
@@ -199,12 +199,12 @@ a {
           order: 2;
   padding-bottom: 8px;
   padding-bottom: 0.5rem;
-  width: 6.4375em;
+  width: 9.4375em; /* was 6.4375em */
 }
 
 @media only screen and (min-width: 569px) {
   .header-main .name-site {
-    margin-top: 0.5em;
+    margin-top: 0.9em;
     margin-left: 0;
     padding-bottom: 0;
   }
@@ -698,7 +698,7 @@ a {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
   clear: both;
-  max-width: 1024px;
+  max-width: 1170px;
   width: 100%;
   margin: 0 auto;
 }
@@ -933,7 +933,7 @@ a {
       -ms-flex-wrap: wrap;
           flex-wrap: wrap;
   padding: 1.5em 1em;
-  max-width: 1024px;
+  max-width: 1170px;
   margin: 0 auto;
 }
 
