--- a/libguides/custom-footer.html
+++ b/libguides/custom-footer.html
@@ -88,4 +88,4 @@
 	<div class="license">Licensed under the <a href="http://creativecommons.org/licenses/by-nc/2.0/" class="license-cc">Creative Commons Attribution Non-Commercial License</a> unless otherwise noted.
 	</div><!-- end footer.footer-info-institure -->
 </footer>
-<script src="http://libanswers.mit.edu/load_chat.php?hash=efc75c55947db323d4faab725b79307f&options=libchat_efc75c55947db323d4faab725b79307f"></script>
+<script src="http://libanswers.mit.edu/load_chat.php?hash=efc75c55947db323d4faab725b79307f&amp;options=libchat_efc75c55947db323d4faab725b79307f"></script>
