Implementing simple footer responsiveness

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -842,6 +842,17 @@ a {
   margin-bottom: 1.5em;
 }
 
+@media only screen and (max-width: 1020px) {
+  .footer-main .links-primary {
+    margin-top: 1.5rem;
+    margin-left: 0;
+  }
+
+  .footer-main .links-primary span:first-of-type {
+    padding-left: 0;
+  }
+}
+
 @media only screen and (min-width: 569px) {
   .footer-main .links-primary span {
     font-weight: 300;
