Adding Remlee's styling edits

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1152,7 +1152,7 @@ a {
   float: left;
 }
 
-/* Darcy edits */
+/* Darcy/Remlee edits */
 #s-lg-guide-description,
 #s-lg-guide-header-search,
 #s-lib-bc,
@@ -1171,6 +1171,16 @@ a {
 
 #s-lg-guide-name {
  font-size: 28px; 
+}
+
+.s-lib-box .s-lib-box-title {
+ color: #000000;
+ font-size: 18px;
+}
+
+/* Changes size of Email Me button*/
+.s-lib-profile-email > a {
+    font-size: 1em !important;
 }
 
 </style>
