--- a/libguides/custom-footer.html
+++ b/libguides/custom-footer.html
@@ -4,32 +4,32 @@
 			<h4><a href="http://libraries.mit.edu/search">Search</a></h4>
 			<a href="http://libraries.mit.edu/bartonplus" class="link-sub">BartonPlus</a>
 			<a href="http://libraries.mit.edu/barton" class="link-sub">Barton catalog</a>
-			<a href="http://libraries.mit.edu/vera" class="link-sub">Vera: E-journals &amp; databases</a>
+			<a href="http://libraries.mit.edu/vera" class="link-sub">Vera: E-journals & databases</a>
 			<a href="http://libraries.mit.edu/worldcat" class="link-sub">WorldCat</a>
 			<a href="http://libraries.mit.edu/reserves" class="link-sub">Course reserves</a>
 			<a href="http://libraries.mit.edu/about/site-search" class="link-sub">Site search</a>
 			<a href="http://libraries.mit.edu/search" class="link-sub">More search options</a>
 		</div>
 		<div class="flex-item">
-			<h4><a href="http://libraries.mit.edu/hours">Hours &amp; locations</a></h4>
+			<h4><a href="http://libraries.mit.edu/hours">Hours & locations</a></h4>
 			<a href="http://libraries.mit.edu/hours" class="link-sub">Hours</a>
 			<a href="http://libraries.mit.edu/locations" class="link-sub">Map of locations</a>
 			<a href="http://libraries.mit.edu/study" class="link-sub">Study spaces</a>
-			<a href="http://libraries.mit.edu/exhibits" class="link-sub">Exhibits &amp; galleries</a>
+			<a href="http://libraries.mit.edu/exhibits" class="link-sub">Exhibits & galleries</a>
 		</div>
 		<div class="flex-item">
-			<h4><a href="http://libraries.mit.edu/borrow">Borrow &amp; request</a></h4>
+			<h4><a href="http://libraries.mit.edu/borrow">Borrow & request</a></h4>
 			<a href="http://libraries.mit.edu/barton-account" class="link-sub">Your Account</a>
-			<a href="http://libraries.mit.edu/getit" class="link-sub">Get it: options for getting books &amp; articles</a>
+			<a href="http://libraries.mit.edu/getit" class="link-sub">Get it: options for getting books & articles</a>
 			<a href="http://libraries.mit.edu/circ" class="link-sub">Circulation FAQ</a>
-			<a href="http://libraries.mit.edu/reserves" class="link-sub">Reserves &amp; TIP FAQ</a>
+			<a href="http://libraries.mit.edu/reserves" class="link-sub">Reserves & TIP FAQ</a>
 			<a href="http://libraries.mit.edu/otherlibraries" class="link-sub">Visit non-MIT libraries</a>
-			<a href="http://libraries.mit.edu/borrow" class="link-sub">More borrow &amp; request options</a>
+			<a href="http://libraries.mit.edu/borrow" class="link-sub">More borrow & request options</a>
 		</div>
 		<div class="flex-item">
 			<h4><a href="http://libraries.mit.edu/research-support">Research support</a></h4>
 			<a href="http://libraries.mit.edu/ask" class="link-sub">Ask us</a>
-			<a href="http://libraries.mit.edu/experts" class="link-sub">Research guides &amp; expert librarians</a>
+			<a href="http://libraries.mit.edu/experts" class="link-sub">Research guides & expert librarians</a>
 			<a href="http://libraries.mit.edu/productivity-tools" class="link-sub">Productivity tools</a>
 			<a href="http://libraries.mit.edu/scholarly" class="link-sub">Scholarly publishing</a>
 			<a href="http://libraries.mit.edu/references" class="link-sub">Citation software</a>
@@ -88,4 +88,4 @@
 	<div class="license">Licensed under the <a href="http://creativecommons.org/licenses/by-nc/2.0/" class="license-cc">Creative Commons Attribution Non-Commercial License</a> unless otherwise noted.
 	</div><!-- end footer.footer-info-institure -->
 </footer>
-<script src="http://libanswers.mit.edu/load_chat.php?hash=efc75c55947db323d4faab725b79307f&amp;options=libchat_efc75c55947db323d4faab725b79307f"></script>
+<script src="http://libanswers.mit.edu/load_chat.php?hash=efc75c55947db323d4faab725b79307f&options=libchat_efc75c55947db323d4faab725b79307f"></script>
