--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,400italic,600,600italic,700,700italic">
 
 <!--added by Darcy to confirm w/ Google webmaster tools we own this site-->
 <meta name="google-site-verification" content="82Cv3HFWvcefC_9XauvglcfB4h3o0uuiC3nKWWkL_eE" />
@@ -1172,6 +1172,7 @@ a {
 
 #s-lg-guide-name {
  font-size: 28px; 
+ font-weight: 300;
 }
 
 .s-lib-box .s-lib-box-title {
