Adding padding to table elements

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1154,6 +1154,11 @@ a {
 }
 
 /* Darcy/Remlee edits */
+
+table, th, td {
+    padding: 5px;
+}
+
 #s-lg-guide-description,
 #s-lg-guide-header-search,
 #s-lib-bc,
