Adding styles for BartonPlus search box

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1212,4 +1212,16 @@ table, th, td {
 .accordion-group .accordion-toggle.collapsed {
   background-image: url('http://libraries.mit.edu/images/libguides-arrow-right.png')
 }
+
+/* BartonPlus search box */
+#s-lg-box-3500974-container input {
+  display: inline-block;
+  margin-right: 5px;
+  vertical-align: top;
+}
+#s-lg-box-3500974-container label {
+  font-weight: normal;
+  max-width: 80%;
+  vertical-align: top;
+}
 </style>
