General content updates
General content updates for version 2 of SpringShare platforms

--- a/libguides/custom-footer.html
+++ b/libguides/custom-footer.html
@@ -39,7 +39,7 @@
 			<h4><a href="http://libraries.mit.edu/about">About us</a></h4>
 			<a href="http://libraries.mit.edu/contact" class="link-sub">Contact us</a>
 			<a href="http://libraries.mit.edu/news" class="link-sub">News</a>
-			<a href="http://libraries.mit.edu/calendar" class="link-sub">Calendar of events</a>
+			<a href="http://libraries.mit.edu/events" class="link-sub">Classes & events</a>
 			<a href="http://libraries.mit.edu/use-policies" class="link-sub">Use policy</a>
 			<a href="http://libraries.mit.edu/about/site-search/" class="link-sub">Services A-Z</a>
 			<a href="http://libraries.mit.edu/about" class="link-sub">More about us</a>
@@ -60,7 +60,7 @@
 			<a href="http://libguides.mit.edu/mit-feeds" title="RSS">
 				<svg class="icon-social--rss" width="2048" height="2048" viewBox="-320 -384 2048 2048" xmlns="http://www.w3.org/2000/svg"><g transform="scale(1 -1) translate(0 -1280)"><path d="M384 192q0 -80 -56 -136t-136 -56t-136 56t-56 136t56 136t136 56t136 -56t56 -136zM896 69q2 -28 -17 -48q-18 -21 -47 -21h-135q-25 0 -43 16.5t-20 41.5q-22 229 -184.5 391.5t-391.5 184.5q-25 2 -41.5 20t-16.5 43v135q0 29 21 47q17 17 43 17h5q160 -13 306 -80.5 t259 -181.5q114 -113 181.5 -259t80.5 -306zM1408 67q2 -27 -18 -47q-18 -20 -46 -20h-143q-26 0 -44.5 17.5t-19.5 42.5q-12 215 -101 408.5t-231.5 336t-336 231.5t-408.5 102q-25 1 -42.5 19.5t-17.5 43.5v143q0 28 20 46q18 18 44 18h3q262 -13 501.5 -120t425.5 -294 q187 -186 294 -425.5t120 -501.5z" fill="black" /></g></svg>
 			</a>
-			<a href="http://libguides.mit.edu/googlescholar" title="Google Scholar">
+			<a href="http://libguides.mit.edu/google/googlescholar" title="Google Scholar">
 				<svg class="icon-social--google-scholar" xmlns="http://www.w3.org/2000/svg" width="189.6" height="192" viewBox="0 0 800 282.4"><path d="M758.2 491.1L600.8 527.4C537 537.3 479.8 546.2 419.2 546.2 115.5 546.2 0 322.8 0 147.8 0-65.7 164-263.8 444.6-263.8 504-263.8 561.2-255 612.9-240.7 695.5-217.5 734-188.9 758.2-172.4L666.8-85.5 628.3-76.7 655.9-120.7C618.5-157 550.2-224.1 420.4-224.1 246.5-224.1 115.5-92.1 115.5 100.5 115.5 307.4 265.2 502.1 505.1 502.1 575.5 502.1 611.8 487.8 644.8 474.6L644.8 297.4 478.7 306.2 566.7 258.9 800 258.9 771.4 286.4C763.7 293 762.6 295.3 760.4 304 759.3 314 758.2 345.9 758.2 356.9L758.2 491.1 758.2 491.1z"/></svg>
 			</a>
 			<a href="http://www.flickr.com/photos/mit-libraries/" title="Flickr">
