--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -28,7 +28,7 @@
         <div class="col-2 flex-item">
           <span class="heading-col">Also try</span>
           <a href="http://libraries.mit.edu/fulltext">FullText Finder <span class="about">Find specific citations</span></a>
-          <a href="http://libguides.mit.edu/googlescholar">Google Scholar for MIT <span class="about">Change settings to get better access</span></a>
+          <a href="http://libguides.mit.edu/google/googlescholar">Google Scholar for MIT <span class="about">Change settings to get better access</span></a>
           <a href="http://libraries.mit.edu/libx">LibX <span class="about">Search/authenticate via browser</span></a>
           <a href="http://dspace.mit.edu/">DSpace@MIT <span class="about">MIT research</span></a>
           <a href="http://dome.mit.edu/">Dome <span class="about">MIT-digitized images, maps, etc.</span></a>
@@ -117,7 +117,7 @@
         </div>
         <div class="col-2 flex-item">
           <span class="heading-col">News, events, &amp; exhibits</span>
-          <a href="http://libraries.mit.edu/calendar">Calendar of events</a>
+          <a href="http://libraries.mit.edu/events">Classes & events</a>
           <a href="http://libraries.mit.edu/news">News</a>
           <a href="http://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a>
         </div>
