--- a/libcal/custom-footer.html
+++ b/libcal/custom-footer.html
@@ -88,3 +88,4 @@
 	<div class="license">Licensed under the <a href="http://creativecommons.org/licenses/by-nc/2.0/" class="license-cc">Creative Commons Attribution Non-Commercial License</a> unless otherwise noted.
 	</div><!-- end footer.footer-info-institure -->
 </footer>
+<script src="//v2.libanswers.com/load_chat.php?hash=be2c654b63dd43f31c56295ee5d78d88"></script>
