Switches from &amp; to & characters

--- a/libanswers/custom-header.html
+++ b/libanswers/custom-header.html
@@ -18,12 +18,12 @@
       <div class="links-sub flex-container group">
         <div class="col-1 flex-item">
           <span class="heading-col">Start here</span>
-          <a href="http://libraries.mit.edu/bartonplus">BartonPlus (mega-search) <span class="about">Articles, e-books, &amp; more</span></a>
-          <a href="http://libraries.mit.edu/vera">Vera <span class="about">E-journals &amp; databases</span></a>
-          <a href="http://libraries.mit.edu/barton">Barton catalog (classic search) <span class="about">Books &amp; more at MIT</span></a>
-          <a href="http://mit.worldcat.org">WorldCat<span class="about">Books &amp; more worldwide</span></a>
+          <a href="http://libraries.mit.edu/bartonplus">BartonPlus (mega-search) <span class="about">Articles, e-books, & more</span></a>
+          <a href="http://libraries.mit.edu/vera">Vera <span class="about">E-journals & databases</span></a>
+          <a href="http://libraries.mit.edu/barton">Barton catalog (classic search) <span class="about">Books & more at MIT</span></a>
+          <a href="http://mit.worldcat.org">WorldCat<span class="about">Books & more worldwide</span></a>
           <a href="http://libraries.mit.edu/barton-reserves">Course reserves</a>
-          <a href="http://libraries.mit.edu/search" class="bottom extra"><span>More search tools &amp; help</span> <span class="about">Images, data, DSpace, etc.</span></a>
+          <a href="http://libraries.mit.edu/search" class="bottom extra"><span>More search tools & help</span> <span class="about">Images, data, DSpace, etc.</span></a>
         </div>
         <div class="col-2 flex-item">
           <span class="heading-col">Also try</span>
@@ -37,32 +37,32 @@
       </div><!-- end div.links-sub -->
     </div><!-- end div.links-primary -->
     <div class="link-primary">
-      <a href="http://libraries.mit.edu/hours">Hours &amp; locations</a>
+      <a href="http://libraries.mit.edu/hours">Hours & locations</a>
       <div class="links-sub flex-container group">
         <div class="col-1 flex-item">
           <span class="heading-col">Locations</span>
           <a href="http://libraries.mit.edu/barker">Barker Library</a>
           <a href="http://libraries.mit.edu/dewey">Dewey Library</a>
           <a href="http://libraries.mit.edu/hayden">Hayden Library</a>
-          <a href="http://libraries.mit.edu/archives">Institute Archives &amp; Special Collections</a>
+          <a href="http://libraries.mit.edu/archives">Institute Archives & Special Collections</a>
           <a href="http://libraries.mit.edu/music">Lewis Music Library</a>
           <a href="http://libraries.mit.edu/lsa">Library Storage Annex</a>
           <a href="http://libraries.mit.edu/rotch">Rotch Library</a>
-          <a href="http://libraries.mit.edu/hours" class="bottom">All hours &amp; locations</a>
+          <a href="http://libraries.mit.edu/hours" class="bottom">All hours & locations</a>
         </div>
         <div class="col-2 flex-item">
           <span class="heading-col">Using the Libraries</span>
           <a href="http://libraries.mit.edu/locations">Map of locations</a>
           <a href="http://libraries.mit.edu/study">Study spaces</a>
           <a href="http://libraries.mit.edu/copying">Scan, copy, print</a>
-          <a href="http://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a>
+          <a href="http://libraries.mit.edu/exhibits">Exhibits & galleries</a>
           <a href="http://libraries.mit.edu/visitors">Non-MIT visitors</a>
           <a href="http://libraries.mit.edu/use-policies">Library use policy</a>
         </div>
       </div><!-- end div.links-sub -->
     </div><!-- end div.links-primary -->
     <div class="link-primary">
-      <a href="http://libraries.mit.edu/borrow">Borrow &amp; request</a>
+      <a href="http://libraries.mit.edu/borrow">Borrow & request</a>
       <div class="links-sub flex-container group">
         <div class="col-1 flex-item">
           <span class="heading-col">Renew, request, suggest</span>
@@ -71,13 +71,13 @@
           <a href="http://mit.worldcat.org">WorldCat <span class="about">Request items not owned by MIT</span></a>
           <a href="http://libraries.mit.edu/illiad">ILLiad <span class="about">Track your Interlibrary Borrowing requests</span></a>
           <a href="http://libraries.mit.edu/suggest-purchase">Suggest a purchase</a>
-          <a href="http://libraries.mit.edu/borrow" class="bottom">More options &amp; help</a>
+          <a href="http://libraries.mit.edu/borrow" class="bottom">More options & help</a>
         </div>
         <div class="col-2 flex-item">
           <span class="heading-col">More information</span>
           <a href="http://libraries.mit.edu/getit">Get it <span class="about">Understand your options</span></a>
           <a href="http://libguides.mit.edu/circfaq">Circulation FAQ <span class="about">Info about fines, renewing, etc.</span></a>
-          <a href="http://libguides.mit.edu/reserves">Course reserves &amp; TIP FAQ</a>
+          <a href="http://libguides.mit.edu/reserves">Course reserves & TIP FAQ</a>
           <a href="http://libraries.mit.edu/otherlibraries">Visit non-MIT libraries <span class="about">Harvard, Boston Library Consortium, etc.</span></a>
         </div>
       </div>
@@ -86,21 +86,21 @@
       <a href="http://libraries.mit.edu/research-support">Research support</a>
       <div class="links-sub flex-container push group">
         <div class="col-1 flex-item">
-          <span class="heading-col">Help &amp; useful tools</span>
+          <span class="heading-col">Help & useful tools</span>
           <a href="http://libraries.mit.edu/ask">Ask us <span class="about">Email, chat, call, drop by</span></a>
-          <a href="http://libraries.mit.edu/experts">Research guides &amp; expert librarians <span class="about">For every research interest</span></a>
-          <a href="http://libraries.mit.edu/offcampus">Connect from on and off-campus <span class="about">Tips &amp; tricks</span></a>
+          <a href="http://libraries.mit.edu/experts">Research guides & expert librarians <span class="about">For every research interest</span></a>
+          <a href="http://libraries.mit.edu/offcampus">Connect from on and off-campus <span class="about">Tips & tricks</span></a>
           <a href="http://libraries.mit.edu/productivity-tools">Productivity tools <span class="about">Apps, LibX, RSS, etc.</span></a>
           <a href="http://libraries.mit.edu/new-books">New books by subject <span class="about">Browse or subscribe to RSS feeds</span></a>
           <a href="http://libraries.mit.edu/research-support" class="bottom">More research support</a>
         </div>
         <div class="col-2 flex-item">
-          <span class="heading-col">Publishing &amp; content management</span>
-          <a href="http://libraries.mit.edu/references">Citation software <span class="about">EndNote, Mendeley, &amp; Zotero</span></a>
+          <span class="heading-col">Publishing & content management</span>
+          <a href="http://libraries.mit.edu/references">Citation software <span class="about">EndNote, Mendeley, & Zotero</span></a>
           <a href="http://libguides.mit.edu/citing">Citing sources <span class="about">Avoid plagiarism, format references, etc.</span></a>
-          <a href="http://libguides.mit.edu/manage-info">Manage your info &amp; data <span class="about">Organize your data, files, and more</span></a>
-          <a href="http://libguides.mit.edu/publishing">Getting published <span class="about">Tools &amp; help</span></a>
-          <a href="http://libraries.mit.edu/scholarly">Scholarly publishing <span class="about">Open access &amp; copyright</span></a>
+          <a href="http://libguides.mit.edu/manage-info">Manage your info & data <span class="about">Organize your data, files, and more</span></a>
+          <a href="http://libguides.mit.edu/publishing">Getting published <span class="about">Tools & help</span></a>
+          <a href="http://libraries.mit.edu/scholarly">Scholarly publishing <span class="about">Open access & copyright</span></a>
         </div>
       </div><!-- end div.links-sub -->
     </div><!-- end div.links-primary -->
@@ -116,10 +116,10 @@
           <a href="http://libraries.mit.edu/about" class="bottom">More about us</a>
         </div>
         <div class="col-2 flex-item">
-          <span class="heading-col">News, events, &amp; exhibits</span>
+          <span class="heading-col">News, events, & exhibits</span>
           <a href="http://libraries.mit.edu/events">Classes & events</a>
           <a href="http://libraries.mit.edu/news">News</a>
-          <a href="http://libraries.mit.edu/exhibits">Exhibits &amp; galleries</a>
+          <a href="http://libraries.mit.edu/exhibits">Exhibits & galleries</a>
         </div>
       </div><!-- end div.links-sub -->
     </div><!-- end div.links-primary -->
