added css for styling the staff cards

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1267,4 +1267,21 @@ position:static;
 width:auto; 
 height:auto; 
 } 
+
+/* staff contact card styles */
+.contact-card .wrap-contact-image {
+  display: inline-block; 
+  vertical-align: middle; 
+  margin-right: 15px;
+}
+
+.contact-card .wrap-contact-info {
+  display: inline-block; 
+  vertical-align: middle;
+}
+
+.contact-card .wrap-contact-help {
+  display: block;
+}
+
 </style>
