add browzine customizations

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1284,4 +1284,20 @@ height:auto;
   display: block;
 }
 
+/* customize browzine widget */
+#browzineWidget .smallWidget {
+  width: auto !important;
+  float: none !important;
+  background-size: contain !important;
+}
+
+#browzineWidget .smallWidget .widgetText {
+  width: auto !important;
+  float: none !important;
+  padding: 10px;
+}
+
+#browzineWidget .widgetText .intro {
+  text-align: center !important;
+}
 </style>
