Switch from Event ID to trimmed h1 text for event label

--- a/libcal/custom-analytics.html
+++ b/libcal/custom-analytics.html
@@ -16,7 +16,7 @@
       hitType: 'event',
       eventCategory: 'LibCal',
       eventAction: 'Form Submission',
-      eventLabel: $('input[name="event_id"]').val()
+      eventLabel: $('h1').text().trim()
     });
   });
 </script>
