add new wordmark, vi, and adjust colors

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -135,7 +135,7 @@ svg {
 /* 1. Header & Nav */
 .header-main {
   position: relative;
-  background: #333;
+  background: #000 url('https://libraries.mit.edu/images/vi-shape7-tp.png') no-repeat 0 65%;
   clear: both;
   width: 100%
 }
@@ -576,11 +576,7 @@ svg {
 
 @media only screen and (min-width:569px) {
   .nav-main .link-primary {
-    border-right: 1px solid #666;
     width: auto
-  }
-  .nav-main .link-primary:first-child {
-    border-left: 1px solid #666
   }
 }
 
@@ -917,7 +913,7 @@ svg {
 
 /* 2. Footer */
 .footer-main {
-  background: #333;
+  background: #000 url('https://libraries.mit.edu/images/vi-shape7-tp.png') no-repeat 0 65%;
   -webkit-flex-wrap: wrap;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
