--- a/libguides/custom-footer.html
+++ b/libguides/custom-footer.html
@@ -97,7 +97,7 @@
 	</div>
 	
 	<div class="footer-info-institute">
-		<a class="link-logo-mit" href="https://libraries.mit.edu//www.mit.edu">
+		<a class="link-logo-mit" href="http://www.mit.edu">
 			<span class="sr">MIT</span>
 			<svg version="1.1" xmlns="http://www.w3.org/2000/svg" x="0" y="0" width="54" height="28" viewBox="0 0 54 28" enable-background="new 0 0 54 28" xml:space="preserve" class="logo-mit"><rect x="28.9" y="8.9" width="5.8" height="19.1" class="color"/><rect width="5.8" height="28"/><rect x="9.6" width="5.8" height="18.8"/><rect x="19.3" width="5.8" height="28"/><rect x="38.5" y="8.9" width="5.8" height="19.1"/><rect x="38.8" width="15.2" height="5.6"/><rect x="28.9" width="5.8" height="5.6"/></svg>
 		</a><!-- End MIT Logo -->
