--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -18,7 +18,7 @@
   <ul class="nav-main-list flex-container">
     <li class="link-primary flex-end">
       <h2 class="main-nav-header">
-        <a id="main-nav-searchmenu-title" href="https://libraries.mit.edu//search" class="no-underline search-link main-nav-link">Search</a>
+        <a id="main-nav-searchmenu-title" href="https://libraries.mit.edu/search" class="no-underline search-link main-nav-link">Search</a>
         <button class="menu-control sr">Search menu</button>
       </h2>
       <div aria-labelledby="main-nav-searchmenu-title" id="main-nav-searchmenu" class="links-sub flex-container group">
