--- a/libcal/custom-footer.html
+++ b/libcal/custom-footer.html
@@ -33,7 +33,7 @@
 				<a href="https://libraries.mit.edu/experts" class="link-sub">Research guides &amp; expert librarians</a>
 				<a href="https://libraries.mit.edu/productivity-tools" class="link-sub">Productivity tools</a>
 				<a href="https://libraries.mit.edu/scholarly" class="link-sub">Scholarly publishing</a>
-				<a href="https://libraries.mit.edu/references" class="link-sub">Citation software</a>
+				<a href="https://libraries.mit.edu/references" class="link-sub">Citation &amp; writing tools</a>
 				<a href="https://libraries.mit.edu/research-support" class="link-sub">More research support options</a>
 			</div>
 			<div class="flex-item">
