--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -79,7 +79,7 @@ html {
 }
 
 body {
-  font-family: "Open Sans", Helvetica, sans-serif;
+  font-family: Helvetica, "Open Sans", sans-serif;
   font-size: 16px; /* was 100%; */
   line-height: 1.4;
   text-rendering: optimizeLegibility;
@@ -87,7 +87,11 @@ body {
 
 a {
   text-decoration: none;
-  color: #338bc5;
+  color: #00F;
+}
+a:hover {
+  color: #09092e;
+  text-decoration: underline;
 }
 
 h3 {
@@ -177,17 +181,17 @@ svg {
 
 .header-main .logo-mit-lib svg {
   max-height: 44px;
-  max-height: 2.75rem;
-  height: auto
-}
-
-.header-main .logo-mit-lib .arch {
-  display: none
+  max-height: 1.75rem;
+  height: auto; 
+  width: 75px;
 }
 
 @media only screen and (min-width:569px) {
-  .header-main .logo-mit-lib .arch {
-    display: block
+  .header-main .logo-mit-lib svg {
+    max-height: 44px;
+    max-height: 2.75rem;
+    height: auto;
+    width: auto;
   }
 }
 
@@ -243,7 +247,7 @@ svg {
 
 .header-main .link-account svg,
 .header-main .link-site-search svg {
-  fill: #c8c8c8;
+  fill: #fff;
   margin: 0 auto;
   padding-bottom: .25em;
   width: 2em
@@ -606,22 +610,20 @@ svg {
 }
 
 .nav-main .main-nav-link.active {
-  background: #d3d3d3;
-  -webkit-box-shadow: 0 0 2px #444, inset 1px 0 0 gray, inset -1px 0 0 gray, inset 0 1px 0 gray;
-  box-shadow: 0 0 2px #444, inset 1px 0 0 gray, inset -1px 0 0 gray, inset 0 1px 0 gray
+  background: #C702C7;
 }
 
 .nav-main .main-nav-link.no-underline:focus,
 .nav-main .main-nav-link.no-underline:hover {
   text-decoration: none;
   color: #fff;
-  background-color: #007db8
+  background-color: #C702C7
 }
 
 @media only screen and (min-width:569px) {
   .nav-main .main-nav-link:focus,
   .nav-main .main-nav-link:hover {
-    background: #338bc5
+    background: #C702C7
   }
 }
 
@@ -630,7 +632,8 @@ svg {
 }
 
 .nav-main .col-2 {
-  background: #f3f3f3
+  border-left: 1px solid #000;
+  background: #fff
 }
 
 .nav-main .links-sub {
@@ -653,7 +656,7 @@ svg {
 
 @media only screen and (min-width:569px) {
   .nav-main .link-primary.open .main-nav-link {
-    background: #338bc5
+    background: #C702C7
   }
 }
 
@@ -667,8 +670,8 @@ svg {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-shadow: 0 0 2px #444;
-    box-shadow: 0 0 2px #444;
+    border: 1px solid #000;
+    border-top: 0;
     max-height: 1000px;
     opacity: 1;
     overflow: visible
@@ -676,7 +679,7 @@ svg {
 }
 
 .nav-main .links-sub a {
-  color: #338bc5;
+  color: #000;
   display: block;
   font-weight: 600;
   padding: .5em
@@ -684,7 +687,9 @@ svg {
 
 .nav-main .links-sub a:focus,
 .nav-main .links-sub a:hover {
-  background: #d9d9d9
+  background: #C702C7;
+  color: #fff;
+  tect-decoration: none;
 }
 
 .nav-main .links-sub [class*=col-] {
@@ -698,7 +703,7 @@ svg {
 }
 
 .nav-main .links-sub .bottom {
-  border-top: 1px solid #dedede
+  border-top: 1px solid #000
 }
 
 .nav-main .links-sub .bottom.extra span:first-of-type:after,
@@ -709,7 +714,7 @@ svg {
 }
 
 .nav-main .bottom:not(.extra) span:not(:first-of-type):before {
-  color: #338bc5;
+  color: #000;
   content: '|';
   display: inline-block;
   margin-right: 4px
@@ -718,7 +723,7 @@ svg {
 .nav-main .heading-col {
   margin: 16px 0 8px 8px;
   margin: 1rem 0 .5rem .5rem;
-  color: #7c7c7d;
+  color: #000;
   display: block;
   font-size: .6em;
   font-weight: 700;
@@ -749,121 +754,7 @@ svg {
   width: 600px
 }
 
-.nav-secondary {
-  border-bottom: 1px solid #dedede;
-  font-size: 16px;
-  font-size: 1rem;
-  margin: 0 20px;
-  z-index: 7000
-}
 
-@media only screen and (max-width:320px) {
-  .nav-secondary {
-    background: #333;
-    height: 0;
-    margin: 0;
-    overflow: hidden;
-    padding: 0
-  }
-  .nav-secondary.active {
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    padding: 0
-  }
-}
-
-.nav-secondary ul {
-  list-style: none
-}
-
-.nav-secondary .menu>ul>li {
-  display: inline-block;
-  position: relative
-}
-
-@media only screen and (max-width:320px) {
-  .nav-secondary .menu>ul>li {
-    display: block
-  }
-}
-
-.nav-secondary .menu>ul>li:nth-child(n+4) ul {
-  right: 0
-}
-
-.nav-secondary .menu>ul>li:hover {
-  background: #dedede;
-  -webkit-box-shadow: 0 0 2px #444;
-  box-shadow: 0 0 2px #444;
-  -webkit-transition: background-color .3s;
-  transition: background-color .3s
-}
-
-@media only screen and (max-width:320px) {
-  .nav-secondary .menu>ul>li:hover {
-    background: 0 0;
-    -webkit-box-shadow: none;
-    box-shadow: none
-  }
-}
-
-.nav-secondary .menu>ul>li:hover li {
-  background: #dedede;
-  border-top: 1px solid #ababab;
-  height: auto;
-  line-height: 1;
-  margin: auto;
-  opacity: 1;
-  overflow: visible;
-  width: 100%;
-  z-index: 7000;
-  -webkit-transition: opacity .3s;
-  transition: opacity .3s
-}
-
-@media only screen and (max-width:320px) {
-  .nav-secondary .menu>ul>li:hover li {
-    display: none
-  }
-}
-
-.nav-secondary .menu>ul>li:hover li a,
-.nav-secondary .menu>ul>li>a {
-  display: block;
-  padding: 16px;
-  padding: 1rem
-}
-
-@media only screen and (max-width:320px) {
-  .nav-secondary .menu>ul>li>a {
-    color: #fff
-  }
-}
-
-.nav-secondary .menu>ul>li li {
-  height: 0;
-  line-height: 0;
-  margin: 0;
-  opacity: 0;
-  overflow: hidden;
-  padding: 0;
-  position: relative;
-  width: 0
-}
-
-.nav-secondary .menu>ul>li ul {
-  -webkit-box-shadow: 0 1px 2px #444;
-  box-shadow: 0 1px 2px #444;
-  position: absolute;
-  width: 320px;
-  width: 20rem
-}
-
-.nav-second>li>a:hover {
-  color: #338bc5!important;
-  text-decoration: underline
-}
 
 .mobile-display {
   display: none
@@ -934,7 +825,7 @@ svg {
 }
 
 .footer-main a {
-  color: #dedede
+  color: #fff
 }
 
 .footer-main .identity {
@@ -1082,7 +973,7 @@ svg {
 }
 
 .footer-main .text-find-us {
-  color: #ebebeb;
+  color: #fff;
   display: none;
   font-size: .625em;
   font-weight: 700;
@@ -1136,7 +1027,7 @@ svg {
 }
 
 .footer-main .social [class*=icon-social] {
-  background: #dedede;
+  background: #fff;
   -webkit-border-radius: 50%;
   border-radius: 50%;
   height: 1.5em;
@@ -1145,7 +1036,7 @@ svg {
 }
 
 .footer-main .social [class*=icon-social] path {
-  fill: #474747
+  fill: #000
 }
 
 @media only screen and (min-width:569px) {
@@ -1161,7 +1052,7 @@ svg {
   -webkit-align-items: baseline;
   -ms-flex-align: baseline;
   align-items: baseline;
-  background: #595959;
+  background: #333;
   display: -webkit-box;
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -1212,7 +1103,7 @@ svg {
 }
 
 .footer-info-institute .license {
-  color: #bbb9b8;
+  color: #ededed;
   font-size: .6875em;
   width: 100%
 }
@@ -1427,7 +1318,7 @@ h1#s-lg-guide-name {
 }
 
 .s-lib-box-content .ui-widget {
-    font-family: "Open Sans", Helvetica, sans-serif;
+    font-family: Helvetica, "Open Sans", sans-serif;
     font-size: 16px; /* was 100%; */
     line-height: 1.4;
     text-rendering: optimizeLegibility;
@@ -1435,7 +1326,7 @@ h1#s-lg-guide-name {
 
 .ui-widget-content a, a {
   text-decoration: none;
-  color: #338bc5;
+  color: #00f;
 }
 
 table, th, td {
