--- a/libguides/custom-footer.html
+++ b/libguides/custom-footer.html
@@ -5,32 +5,32 @@
 				<h4><a href="https://libraries.mit.edu/search">Search</a></h4>
 				<a href="https://libraries.mit.edu/quicksearch" class="link-sub">Quick search</a>
 				<a href="https://libraries.mit.edu/barton" class="link-sub">Barton catalog</a>
-				<a href="https://libraries.mit.edu/vera" class="link-sub">Vera: E-journals & databases</a>
+				<a href="https://libraries.mit.edu/vera" class="link-sub">Vera: E-journals &amp; databases</a>
 				<a href="https://libraries.mit.edu/worldcat" class="link-sub">WorldCat</a>
 				<a href="https://libraries.mit.edu/barton-reserves" class="link-sub">Course reserves</a>
 				<a href="https://libraries.mit.edu/about/site-search" class="link-sub">Site search</a>
 				<a href="https://libraries.mit.edu/search" class="link-sub">More search options</a>
 			</div>
 			<div class="flex-item">
-				<h4><a href="https://libraries.mit.edu/hours">Hours & locations</a></h4>
+				<h4><a href="https://libraries.mit.edu/hours">Hours &amp; locations</a></h4>
 				<a href="https://libraries.mit.edu/hours" class="link-sub">Hours</a>
 				<a href="https://libraries.mit.edu/locations" class="link-sub">Map of locations</a>
 				<a href="https://libraries.mit.edu/study" class="link-sub">Study spaces</a>
-				<a href="https://libraries.mit.edu/exhibits" class="link-sub">Exhibits & galleries</a>
+				<a href="https://libraries.mit.edu/exhibits" class="link-sub">Exhibits &amp; galleries</a>
 			</div>
 			<div class="flex-item">
-				<h4><a href="https://libraries.mit.edu/borrow">Borrow & request</a></h4>
+				<h4><a href="https://libraries.mit.edu/borrow">Borrow &amp; request</a></h4>
 				<a href="https://libraries.mit.edu/barton-account" class="link-sub">Your Account</a>
-				<a href="https://libraries.mit.edu/getit" class="link-sub">Get it: options for getting books & articles</a>
+				<a href="https://libraries.mit.edu/getit" class="link-sub">Get it: options for getting books &amp; articles</a>
 				<a href="https://libraries.mit.edu/circ" class="link-sub">Circulation FAQ</a>
-				<a href="https://libraries.mit.edu/reserves" class="link-sub">Reserves & TIP FAQ</a>
+				<a href="https://libraries.mit.edu/reserves" class="link-sub">Reserves &amp; TIP FAQ</a>
 				<a href="https://libraries.mit.edu/otherlibraries" class="link-sub">Visit non-MIT libraries</a>
-				<a href="https://libraries.mit.edu/borrow" class="link-sub">More borrow & request options</a>
+				<a href="https://libraries.mit.edu/borrow" class="link-sub">More borrow &amp; request options</a>
 			</div>
 			<div class="flex-item">
 				<h4><a href="https://libraries.mit.edu/research-support">Research support</a></h4>
 				<a href="https://libraries.mit.edu/ask" class="link-sub">Ask us</a>
-				<a href="https://libraries.mit.edu/experts" class="link-sub">Research guides & expert librarians</a>
+				<a href="https://libraries.mit.edu/experts" class="link-sub">Research guides &amp; expert librarians</a>
 				<a href="https://libraries.mit.edu/productivity-tools" class="link-sub">Productivity tools</a>
 				<a href="https://libraries.mit.edu/scholarly" class="link-sub">Scholarly publishing</a>
 				<a href="https://libraries.mit.edu/references" class="link-sub">Citation &amp; writing tools</a>
@@ -40,7 +40,7 @@
 				<h4><a href="https://libraries.mit.edu/about">About us</a></h4>
 				<a href="https://libraries.mit.edu/contact" class="link-sub">Contact us</a>
 				<a href="https://libraries.mit.edu/news" class="link-sub">News</a>
-				<a href="https://libraries.mit.edu/events" class="link-sub">Classes & events</a>
+				<a href="https://libraries.mit.edu/events" class="link-sub">Classes &amp; events</a>
 				<a href="https://libraries.mit.edu/use-policies" class="link-sub">Use policy</a>
 				<a href="https://libraries.mit.edu/about/site-search/" class="link-sub">Services A-Z</a>
 				<a href="https://libraries.mit.edu/about" class="link-sub">More about us</a>
