--- a/libanswers/custom-head.html
+++ b/libanswers/custom-head.html
@@ -86,13 +86,13 @@ body {
 }
 
 a, a i {
-  text-decoration: none;
-  color: #00F;
+  text-decoration: underline;
+  color: #000;
 }
 
+a:hover, 
 a:hover i {
-  color: #09092e;
-  text-decoration: underline;
+  color: #00f;
 }
 
 svg {
