--- a/libwizard/custom-head.html
+++ b/libwizard/custom-head.html
@@ -86,12 +86,11 @@ body {
 }
 
 a {
-  text-decoration: none;
-  color: #00F;
+  text-decoration: underline;
+  color: #000;
 }
 a:hover {
-  color: #09092e;
-  text-decoration: underline;
+  color: #00f;
 }
 
 h3 {
