--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1461,4 +1461,21 @@ height:auto;
 #browzineWidget .widgetText .intro {
   text-align: center !important;
 }
+
+/* customize Worldcat search box */
+.s-lg-box-wrapper-25193671 {
+    font-size: .8em;
+}
+.s-lg-box-wrapper-25193671 .s-lib-box-content {
+  padding: 0 1em;
+}
+
+.s-lg-box-wrapper-25193671 input {
+  padding: .5em !important; 
+  min-width: 5em !important; 
+}
+.s-lg-box-wrapper-25193671 #discovery-search-form {
+  padding: 1em;
+}
+
 </style>
