--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -144,11 +144,10 @@
         <div class="col-1 flex-item">
           <h3 class="heading-col">About the Libraries</h3>
           <ul class="list-unbulleted">
-            <li><a href="https://libraries.mit.edu/about/organization">About our organization</a></li>
+            <li><a href="https://libraries.mit.edu/about/">About us</a></li>
             <li><a href="https://libraries.mit.edu/contact">Contact us</a></li>
             <li><a href="https://libraries.mit.edu/jobs">Jobs</a></li>
             <li><a href="https://libraries.mit.edu/giving">Giving to the MIT Libraries</a></li>
-            <li><a href="https://libraries.mit.edu/about" class="bottom">More about us</a></li>
           </ul>
         </div>
         <div class="col-2 flex-item">
