Add HTML and CSS for temporary COVID-19 banner

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1478,4 +1478,19 @@ height:auto;
   padding: 1em;
 }
 
+/* Styling for COVID-19 info banner */
+.alert-banner {
+  display: block;
+  margin: 1rem auto;
+  border-radius: 2px;
+  padding: 1.6rem 2rem;
+  border: 1px solid #000;
+  border-top: 5px solid #000;
+  color: #000;
+  font-weight: 600;
+}
+.alert-banner .fa {
+  display: inline-block;
+  margin-right: 0.5em;
+}
 </style>
