Update covid alert
Modify text and use updated link

--- a/libguides/custom-header.html
+++ b/libguides/custom-header.html
@@ -3,8 +3,8 @@
   <div class="alert alert-banner" role="alert">
     <p><i class="fa fa-info-circle fa-lg"></i>
       See
-      <a href="http://libraries.mit.edu/covid19">MIT Libraries COVID-19 Response</a>
-      for the latest information about library services.
+      <a href="https://libraries.mit.edu/service-updates">MIT Libraries service updates</a>
+      for the latest information on access to services, collections, and spaces.
     </p>
   </div>
 </div>
