Updates footer based on ticket UXWS-1021

--- a/aeon/footer.html
+++ b/aeon/footer.html
@@ -8,10 +8,16 @@
         </a>
         <div class="about-mit">
           <span class="item">Massachusetts Institute of Technology</span>
-          <span class="item">77 Massachusetts Avenue</span>
-          <span class="item">Cambridge MA 02139-4307</span>
+        </div>
+        <div class="wrap-policies">
+          <nav aria-label="MIT Libraries policy menu">
+            <span class="item"><a href="https://libraries.mit.edu/privacy" class="link-sub">Privacy</a></span>
+            <span class="item"><a href="https://libraries.mit.edu/permissions" class="link-sub">Permissions</a></span>
+            <span class="item"><a href="https://libraries.mit.edu/accessibility" class="link-sub">Accessibility</a></span>
+          </nav>
         </div>
       </div>
+      <div class="license">© 2019 <a href="http://www.atlas-sys.com">Atlas Systems, Inc.</a> All Rights Reserved.</div>
     </div>
   </div>
 </footer>
