Remove Covid-19 banner markup
This also includes a few other invisible changes found in the branding materials in production.

--- a/libguides/custom-head.html
+++ b/libguides/custom-head.html
@@ -1477,7 +1477,7 @@ height:auto;
 }
 </style>
 <style>
-/*styling for a-z datbases */
+/*styling for a-z databases */
 /* Hide the Database Types dropdown */
 #col-types {
     display: none;
